--- a/QuizApp/app/src/main/res/layout/question_card.xml
+++ b/QuizApp/app/src/main/res/layout/question_card.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
+
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:background="#D5D6D8"
         android:padding="16dp">
 
         <TextView
@@ -26,14 +30,15 @@
             android:id="@+id/answer_option_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
+            android:background="@drawable/options_background"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp"
-            android:layout_marginStart="20dp"
             android:text="for loops"
-            android:background="@drawable/options_background"
+            android:textColor="#000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/question" />
 
@@ -41,48 +46,48 @@
             android:id="@+id/answer_option_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="30dp"
+            android:background="@drawable/options_background"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:text="If statements"
-            android:background="@drawable/options_background"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/question"
+            android:textColor="#000"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/question" />
 
         <TextView
             android:id="@+id/answer_option_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
+            android:background="@drawable/options_background"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp"
-            android:layout_marginStart="20dp"
             android:text="Do-while loops"
-            android:background="@drawable/options_background"
+            android:textColor="#000"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/answer_option_1"
-            />
+            app:layout_constraintTop_toBottomOf="@id/answer_option_1" />
 
         <TextView
             android:id="@+id/answer_option_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="30dp"
+            android:background="@drawable/options_background"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:text="while loop"
-            android:background="@drawable/options_background"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/answer_option_2"
+            android:textColor="#000"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/answer_option_2" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
